# emerald

./: CMakeLists.txt  Cargo.toml  README.md  conanfile.txt  go.mod
src/: CMakeLists.txt  main.rs  router.rs  server.rs
src/emerald-client/: CMakeLists.txt  emerald.cpp
src/protocol/: mod.rs
src/protocol/status/: mod.rs  ping.rs
src/serialization/: reader.rs
