[package]
name = "emerald"
version = "0.1.0"
authors = ["jstzwj <1103870790@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { git = "https://github.com/tokio-rs/tokio.git" }
futures = "0.3.0"
bytes = "0.4"
async-trait = "0.1.17"